--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,15 +9,15 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand">
+    <a class="brand">
      
-     <img src= "/Users/justcoding/Desktop/marnaspals/app/assets/download.jpg">
-     Marna's Pals
+     <img src= "assets/logo2.png">
+    
     </a>
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-left">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li> 
       <li><%= link_to "Scholars", scholars_path %></li>
