--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="/Users/justcoding/Desktop/marnaspals/app/assets/download.jpg" alt="First slide">
+          <img class="img-responsive center-block" src="assets/babytiger1.jpg" title="First slide">
             <div class="carousel-caption">
               <h1>Example headline.</h1>
               <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="/Users/justcoding/Desktop/marnaspals/app/assets/images" alt="Second slide">
+          <img class="img-responsive center-block" src="assets/babytiger2.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/Users/justcoding/Desktop/marnaspals/app/assets/images" alt="Third slide">
+          <img class="img-responsive center-block" src="assets/babytiger3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
