--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <html lang="en">
-  
+  <br />
+
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -8,6 +9,7 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
@@ -38,6 +40,16 @@
             </div>
           </div>
         </div>
+        <div class="item">
+          <img class="img-responsive center-block" src="assets/babytiger3.jpg" alt="Fourth slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>One more for good measure.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -49,6 +61,19 @@
       </a>
     </div><!-- /.carousel -->
 
+</br>
+
+<div class="wrapper">
+<img class="img-responsive center-block" src="assets/babytiger4.jpg" alt="Image for Tips">
+<form class="form-inline">
+  <div class="form-group">
+ 
+    <label for="exampleInputEmail2">Email</label>
+    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="my.pal@example.com">
+
+  <button type="submit" class="btn btn-primary btn-lg">Send Me Free Tips</button>
+</form>
+</div>
 
    
       <!-- START THE FEATURETTES -->
