--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,13 +69,18 @@
 
 
 
-<form class="form-inline">
+
+<form class="form-inline" action="/subscribers" class="new_subscriber" id="new_subscriber" method="post">
+  <div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="nHHdWoL8aq3/6rHKYiX64uu3tlOBmDTMdsG19dD7t70=" /></div>
+
   <div class="form-group">
  
-    <label for="exampleInputEmail2">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="my.pal@example.com">
+    
+    <input class="form-control input-lg" id="subscriber_email" name="subscriber[email]" type="email"  placeholder="my.pal@example.com"/>
 
-  <button type="submit" class="btn btn-primary btn-lg">Send Me Free Tips</button>
+  <button type="submit" class="btn btn-primary btn-lg" value="Create Subscriber">Send Me Free Tips</button>
+
+
 </form>
 </div>
 
