--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -1,4 +1,11 @@
+
+
+<% if user_signed_in? %>
+
+<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+
 <h1>Listing subscribers</h1>
+
 
 <table>
   <thead>
@@ -23,3 +30,16 @@
 <br>
 
 <%= link_to 'New Subscriber', new_subscriber_path %>
+
+  <% else %>
+
+  <p> 
+    <%= link_to "Log In", new_user_session_path, class: "btn btn-default btn-lg" %>
+    <!-- <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>  --> 
+
+
+  </p>  
+
+<% end %> 
+
+
