--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -1,5 +1,9 @@
+<% if user_signed_in? %>
+
 <h1>New subscriber</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', subscribers_path %>
+
+<% end %> 
