--- a/app/views/subscribers/show.html.erb
+++ b/app/views/subscribers/show.html.erb
@@ -1,4 +1,5 @@
-	
+<% if user_signed_in? %>
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -8,3 +9,5 @@
 
 <%= link_to 'Edit', edit_subscriber_path(@subscriber) %> |
 <%= link_to 'Back', subscribers_path %>
+
+<% end %> 
