--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
 	
 <%= render 'layouts/header' %>
+
 			<div class="container">
 				<% flash.each do |name, msg| %>
      <%= content_tag(:div, msg, class: "alert alert-info") %>
@@ -19,5 +20,6 @@
 			</div>
 
 </body>
+<%= render 'layouts/footer' %>
 </html>
-# test
+
