--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,14 +1,12 @@
-$body-bg: #D65CFF;
+$body-bg: #5200A3;
 $navbar-inverse-bg: #bdc3c7;
+$link-color: #000000;
 $navbar-inverse-link-color: #9900CC;
-$brand-primary: #9900CC;
+$brand-primary: #A366E0;
+$text-color: #FFFFFF;
 @import 'bootstrap';
 
 .wrapper {
     text-align: center;
 }
 
-.button {
-    position: absolute;
-    top: 50%;
-}
