--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,31 +12,33 @@
         <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
+
         <div class="item active">
-          <img class="img-responsive center-block" src="assets/babytiger1.jpg" title="First slide">
-            <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-        </div>
-        <div class="item">
-          <img class="img-responsive center-block" src="assets/babytiger2.jpg">
+          <img class="img-responsive center-block" src="assets/marnaVarious 5_edited.JPG" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>Meet Marna</h1>
+              <p>Marna was an amazing woman who valued her friends, family and helping others. She passed away in 2008 from Pancreatic Cancer. This scholarship is in hier honor. </p>
+              <p><a class="btn btn-lg btn-primary" href="\about" role="button">Learn More</a></p>
             </div>
           </div>
         </div>
+
         <div class="item">
-          <img class="img-responsive center-block" src="assets/babytiger3.jpg" alt="Third slide">
+          <img class="img-responsive center-block" src="assets/LP26.jpg" title="Second slide">
+            <div class="carousel-caption">
+              <h1>This year we awarded $15,000</h1>
+              <p>Do you want to meet the 15 students that won an award this year? We had over 50 qualified students apply, but we could only pick some of them. </p>
+              <p><a class="btn btn-lg btn-primary" href="\applyhere" role="button">Meet Them</a></p>
+            </div>
+        </div>
+        <div class="item">
+          <img class="img-responsive center-block" src="assets/LP26.jpg" title="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>Are you here to apply for an award?</h1>
+              <p>Check out the eligibility requirements and apply for our scholarship. The applicaiton is open from Jan 1 to Mar 31.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Apply Now</a></p>
             </div>
           </div>
         </div>
@@ -44,9 +46,9 @@
           <img class="img-responsive center-block" src="assets/babytiger3.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>Spiking for Scholarships</h1>
+              <p>Join the largest charity volleyball tournament in Central Jersey every June. Make a team or sign up yourself; either way you'll have a blast!</p>
+              <p><a class="btn btn-lg btn-primary" href="\events" role="button">Join Now</a></p>
             </div>
           </div>
         </div>
@@ -67,7 +69,7 @@
 <img class="img-responsive center-block" src="assets/babytiger4.jpg" alt="Image for Tips">
 
 
-
+<br>
 
 
 <form class="form-inline" action="/subscribers" class="new_subscriber" id="new_subscriber" method="post">
@@ -82,6 +84,7 @@
 
 
 </form>
+</br>
 </div>
 
    
