--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -1,2 +1,64 @@
 
-<h1> This is a placeholder </h1>
+
+<h2> Our Annual Volleyball Tournament </h2>
+
+<div class="container">
+	<div class="wrapper">
+		
+
+
+<div class="item">
+            
+              <a href="\vball" title="We Spike for Scholarships">
+                <img class="img-responsive center-block" src="assets/vball2.jpg">
+              </a>
+           
+</div>
+
+
+</div>
+</div>
+
+<hr class="featurette-divider">
+
+<h2> The Annual Gala and Silent Auction </h2>
+<br></br>
+<div class="container">
+	<div class="wrapper">
+		
+
+
+<div class="item">
+            
+              <a href="\gala" title="Party On, Garth!">
+                <img class="img-responsive center-block" src="assets/gala.jpg">
+              </a>
+           
+</div>
+
+
+</div>
+</div>
+
+<hr class="featurette-divider">
+
+<h2> The Run For Hope </h2>
+
+<div class="container">
+	<div class="wrapper">
+		
+
+
+<div class="item">
+            
+              <a href="http://www.therun4hope.com" title="Run, Forrest, Run!">
+                <img class="img-responsive center-block" src="assets/runforhope.jpg">
+              </a>
+           
+</div>
+
+
+</div>
+</div>
+
+<hr class="featurette-divider">
