--- a/app/views/pages/scholars.html.erb
+++ b/app/views/pages/scholars.html.erb
@@ -21,7 +21,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Daniyal Aikal.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -40,7 +40,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Rebecca Armand senior pic.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -49,7 +49,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Dana Barth
-           <span class="text-muted"> XXXX , XXXX University </span></h2>
+           <span class="text-muted"> Undecided , Camden County Community College </span></h2>
           <p >Dana’s mom was affected by stage four colorectal cancer. Her mom was diagnosed in January 2013 and passed away in October of 2013. While her mom was only sick for 9 months, she will always be affected by the loss of her mother, she said. “My father and my brother are my support network. My father has shaped who I am today by expecting a lot from me. My brother has shaped who I am today by testing my patience,” she explained.
 
 		  In Dana’s essay, she explains what it was like being a teenager with a sick mother. “She was diagnosed in the middle of my junior year and passed away in the beginning of my senior year. That time is meant for having fun with friends, but mine was spent taking care of my mother and spending her last moments with her then stepping up to take care of the house and family the way she did. Not all 17/18/19 year olds grocery shop, cook dinner, clean the house, while still being a full time high school student trying to graduate and get into college. Getting into college was going to be a difficult process for me based on the fact that my junior and senior year grades were not up to par. I put school on the back burner while I focused on taking care and spending time with my mom because I knew she did not have much time left.” 
@@ -60,7 +60,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Dana.jpeg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -79,7 +79,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Siobhan 2015.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -87,7 +87,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Michele Kolotnick
+          <h2 class="featurette-heading">Michelle Kotolnick
            <span class="text-muted"> Psychology, Montclair State University</span></h2>
           <p >“Everyone has a unique story to them that defines them in some way. My unique story is that I lost my mother when I was seven and my father when I was thirteen. Now I am eighteen years old living with my older sister, her husband and her two kids. My life has been anything but ordinary; however, that hasn’t stopped me from working hard and accomplishing my goals. All it has done is make it harder but more rewarding. As a teen I have seen many things. I have seen suffering, sadness, tragedy and death, as like many children and adults in this world. I have watched both my parents pass away from cancer.” 
 
@@ -97,7 +97,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Michelle Kotolnick.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -105,8 +105,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Brandon Letteri
-           <span class="text-muted"> Finance, XXXX University </span></h2>
+          <h2 class="featurette-heading">Brandon Latteri
+           <span class="text-muted"> Finance, University of Massachusetts </span></h2>
           <p >Brandon’s brother was diagnosed with Leukemia in 2010. Brandon was in 8th grade at the time, and totally changed the life of him and his family. “I rely on my parents for support. My parents are always there for me when I have questions involving my brothers treatment and other issues in my personal life. Due to their stressful schedule regarding doctors visits, outpatient care, and work, I have fended for myself most of the time which has taught me to be an independent person.”
 		  
 		  Although the Leukemia that made Brandon’s brother so sick had been put into remissions, the cancer has come back multiple times. These multiple diagnoses have left his brother weak and his family still fighting. “As of this year, 2015, my family is still battling cancer. After 5 years of treatment and medical bills and taking time away from work we are farther away from curing him then we were in 2010. Each day that we continue treating this cancer, is another day my parents have to take off from work or spend their paychecks on hospital bills and insurance co-pays. The unexpected hospital trips are also contributing to the mountain of bills the have resulted from this disease.”
@@ -117,7 +117,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Brandon Latteri.jpeg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -136,7 +136,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Gina Lione-Napoli.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -153,7 +153,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Sarah LoRusso.JPG" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -163,7 +163,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Syed Ahsan Mahmood
-           <span class="text-muted"> Biology, XXX University</span></h2>
+           <span class="text-muted"> Biology, Rutgers University</span></h2>
           <p > “In early January of 2014, after having some unusual symptoms, I consulted with my primary care physician, who subsequently referred me to a urologist. After some blood work and a CT scan, I was diagnosed with a tumor in my left kidney and immediately went through surgery to have the kidney removed. After the biopsy, we received the diagnosis: a rare pediatric cancer; Ewing’s Sarcoma.” Syed has already received 16 of his 17 rounds of chemotherapy and has experienced physical and mental struggles that would challenge any student. Despite these struggles Syed was awestruck and inspired by the other young children fighting cancer in the hospital with him. 
 
 		  His cancer treatments and travel between NYC and NJ have been very expensive and have made it a challenge to afford a college education. Despite these challenges, Syed is excited to pursue a career in biology or computer sciences, but in the end hoping to make somebody’s life a little easier. “I think the greatest lesson that I have learned throughout all of this is that I will find ways to achieve my dreams because I am no longer relying on a bubble, but rather an innate drive that I know will one day propel me toward success.”
@@ -174,7 +174,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Syed A. Mahmood.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -183,7 +183,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Amna Rana
-           <span class="text-muted">MXXXX, XXXXX University</span></h2>
+           <span class="text-muted">Biology, Rutgers University</span></h2>
           <p >Amna lost her father to an aggressive form of brain cancer, gliosarcome, only 5 weeks after his diagnosis. Despite a prognosis of about 9 months, the treatment given to Amna’s father was not able to fight off the disease, despite a great outlook and demeanor from her father. It was a whirlwind time and took a very significant toll on her family, financially and emotionally. 
 
 		  Despite these challenges, Amna has continued to shine, balancing work and tutoring with her studies and maintaining a near perfect grade point average. She says that these experiences have shaped her attitude and plans for her career, “My father and mother always dreamed of us as successful, educated, and happy individuals. Our own ambitions and their support have guided us towards education and hard work. As I study for the MCAT now, I aspire to be an oncologist and researcher. Hoping to infuse empathy and skill into the care of individuals out there, I try to excel in my classes, work diligently as an instructor, and reach for my goals. However, with financial constraints, it does become very stressful. This scholarship would allow me a certain amount of relief and would greatly influence my next semester in terms of work load. I would greatly appreciate it if I would be considered for the scholarship. Thank you so much.”
@@ -192,7 +192,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Amna Rana.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -211,7 +211,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Aleks Spirollari.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -231,7 +231,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Jessica Tynon.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -250,6 +250,6 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="assets\Oren Vitenson.JPG" alt="Generic placeholder image">
         </div>
       </div>
