--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,14 @@
 <footer>
 	<br></br>
+  <br></br>
+
 	<div class = "container">
 
        <p class = "wrapper">
 
-       	<a class="btn btn-lg btn-primary pull-center" href="donate" role="button">Donate Now</a></p>
+       	<a class="btn btn-lg btn-primary" href="donate" role="button">Donate Now</a>
+
+       </p>
 	
     <br> </br>
         <p class="pull-right">
