--- a/app/views/pages/contactus.html.erb
+++ b/app/views/pages/contactus.html.erb
@@ -1,1 +1,106 @@
-<h1> This is a placeholder </h1>
+<h1> Thank you for your interest in contacting Marna's Pals </h1>
+
+<div class = "container">
+	<div class = "wrapper">
+
+		<div class="row">
+			<div class="col-md-5 col-md-offset-1">
+				<div class = "item">
+					<h2> For General Inquiries Contact: 
+ 						<a href="mailto:marnaspals@gmail.com"> marnaspals@gmail.com </a>
+						 <br>
+						 <a href="tel:3478687725"> (347) 8-OURPAL </a>
+
+					</h2>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<h2> Our Mailing Address: <br>
+				Marna's Pals <br>
+				PO Box 366 <br>
+				Kingston, NJ 08528
+
+				</h2>
+			</div>
+		</div>
+
+			<br>
+
+		<div class="row">
+			<div class="col-md-3">
+				<div class = "item">
+					<br></br>
+					<h2> David Pal  <br> President 
+					</h2>
+
+					<h3>
+						<img style="width:100%;height:100%;" src="assets/headshotdpal2.jpg">
+							<a href="mailto:dpal@marnaspals.com"> dpal@marnaspals.com </a>
+					 	<br>
+					 	<a href="tel:6094360793"> (609) 436-0793 </a>
+					 </h3>
+				</div>
+			</div>
+
+
+			<div class="col-md-3">
+				<div class = "item">
+					<br></br>
+					<h2> 
+						Liz Diaz 
+						<br> 
+						V. President 
+					</h2>
+					<h3>
+						<img style="width:100%;height:100%;" src="assets/headshotldiaz.jpg">
+
+ 							<a href="mailto:ediaz@marnaspals.com"> ediaz@marnaspals.com </a>
+
+ 						<br>
+					</h3>
+				</div>
+			</div>
+
+			<div class="col-md-3">
+				<div class = "item">
+					<br></br>
+					<h2> 
+						Doug Pritchard 
+						<br>
+						Board Sec. 
+						<br>
+					</h2>
+					<h3>
+						<img style="width:100%;height:100%;" src="assets/headshotdpal2.jpg">
+					</h3>
+					<h4>
+ 						<a href="mailto:dpritchard@marnaspals.com"> dpritchard@marnaspals.com </a>
+ 						<br>
+					</h4>
+				</div> 
+			</div>
+
+
+			<div class="col-md-3">
+				<div class = "item">
+					<br></br>
+					<h2> 
+						Jess Pritchard 
+						<br> 
+						Scholarships
+					</h2>
+					<h3>
+						<img style="width:100%;height:100%;" src="assets/headshotjpritchard.jpg">
+					</h3>
+					<h4>
+					 	<a href="mailto:jpritchard@marnaspals.com"> jpritchard@marnaspals.com </a>
+					 	<br>
+					</h4>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+	
