--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -1,1 +1,117 @@
-<h1> This is a placeholder </h1>
+
+<div class="container">
+	<div class="wrapper">
+
+
+<h1> How would you like to help these students? </h1>
+ <h5> *Does your company match donations? We'd love to help you get your company to match your donation and double your impact! </h5>
+	<br> 
+	</br>
+
+<div class="row">
+	<div class="col-md-2">
+	  	<div class="item">
+            <h2> 1 Dining Hall Meal </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9VPHHVMDMVMH6" title="We Spike for Scholarships" target="_blank" >
+                <img class="img-responsive center-block" src="assets/dininghallmeal.jpg">
+              </a>
+           
+		</div>
+	</div>
+    <div class="col-md-2 col-md-offset-1">
+  		<div class="item">
+            <h2> 1 Week of Coffee </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ENG7ANLNK7KAA" title="We Spike for Scholarships" target="_blank" >
+                <img class="img-responsive center-block" src="assets/oneweekofcoffee.jpg">
+              </a>
+           
+		</div>
+  	</div>
+
+  	<div class="col-md-2 col-md-offset-1">
+  		<div class="item">
+            <h2> 1 Book for Class </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YPP8FLBJ96JUE" title="We Spike for Scholarships" target="_blank" >
+                <img class="img-responsive center-block" src="assets/onetextbook.jpg">
+              </a>
+           
+		</div>
+  	</div>
+
+  	<div class="col-md-2 col-md-offset-1">
+  		<div class="item">
+            <h2> School Supplies </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=C3QUD9H684748" title="We Spike for Scholarships" target="_blank" >
+                <img class="img-responsive center-block" src="assets/supplies.jpg">
+              </a>
+        </div>
+  	</div>    
+
+</div>
+
+<br></br>
+
+<div class="row">
+
+	<div class="col-md-2">
+  		<div class="item">
+            <h2> 1 Month of Groceries </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QKYC9Z6VDRQP2" title="We Spike for Scholarships" target="_blank" >
+                <img class="img-responsive center-block" src="assets/groceries.jpg">
+              </a>
+           
+		</div>
+  	</div>
+
+	<div class="col-md-2 col-md-offset-1">
+  		<div class="item">
+            <h2> Parking Pass </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=H9ADUE86Y52DA" title="We Spike for Scholarships" target="_blank" >
+                <img class="img-responsive center-block" src="assets/parkingpass.jpg">
+              </a>
+           
+		</div>
+  	</div>
+
+  	<div class="col-md-2 col-md-offset-1">
+  		<div class="item">
+            <h2> A Semester of Books </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K4XRXDU9NBVCA" title="We Spike for Scholarships" target="_blank" >
+                <img class="img-responsive center-block" src="assets/semesteroftextbooks.jpeg">
+              </a>
+           
+		</div>
+  	</div>
+
+  	<div class="col-md-2 col-md-offset-1">
+  		<div class="item">
+            <h2> A Meal Plan </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SCEFYB6AZL3LN" title="We Spike for Scholarships" target="_blank" >
+                <img class="img-responsive center-block" src="assets/mealplan.jpg">
+              </a>
+           
+		</div>
+  	</div>
+
+</div>
+<br></br>
+
+
+<div class="row">
+
+  <div class="col-md-4 col-md-offset-4">
+      <div class="item">
+            <h2> Other </h2>
+              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3JSUNL5T6KQLS" title="We Spike for Scholarships" target = "_blank">
+                <img class="img-responsive center-block" src="assets/other.jpg">
+              </a>
+           
+    </div>
+    </div>
+
+</div>
+    
+ 
+
+</div>
+</div>
