--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -1,6 +1,6 @@
 
 
-<h2> Our Annual Volleyball Tournament </h2>
+<h2> 4th Annual Volleyball Tournament </h2>
 
 <div class="container">
 	<div class="wrapper">
@@ -21,7 +21,7 @@
 
 <hr class="featurette-divider">
 
-<h2> The Annual Gala and Silent Auction </h2>
+<h2> 3rd Annual Gala and Silent Auction </h2>
 <br></br>
 <div class="container">
 	<div class="wrapper">
@@ -51,7 +51,7 @@
 
 <div class="item">
             
-              <a href="http://www.therun4hope.com" title="Run, Forrest, Run!">
+              <a href="http://www.therun4hope.com" target="_blank" title="Run, Forrest, Run!">
                 <img class="img-responsive center-block" src="assets/runforhope.jpg">
               </a>
            
