--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -1,1 +1,32 @@
-<h1> This is a placeholder </h1>
+<h1> 
+	Check out these great resources from local and national organizations! 
+</h1>
+
+<div class = "container">
+	
+
+		<div class = "col-md-9 col-md-offset-1">
+
+
+		<hr class="featurette-divider">
+
+				TEST
+
+				
+		<hr class="featurette-divider">
+
+
+		<hr class="featurette-divider">
+
+
+		<hr class="featurette-divider">
+
+
+		<hr class="featurette-divider">
+
+
+		<hr class="featurette-divider">
+
+
+
+</div>
