--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,7 +8,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Why did we start Marna's Pals? <span class="text-muted">For Marna</span></h2>
+          <h2 class="featurette-heading">Why did we start Marna's Pals? <span class="text-primary">For Marna</span></h2>
           <p class="lead">The idea for Marna's Pals came after Marna passed away from Pancreatic Cancer in 2008. David Pal, Marna's son, was a Freshman at Rutgers University when she passed away and was fortunate to receive a lot of support from the University. When David graduated with no student loans, he realized how lucky he was and wanted to pay this forward by helping other students like him to afford to go to college. David recruited his friends and family to start an organizaiton with this purpose, and Marna's Pals was born</p>
         </div>
         <div class="col-md-5">
@@ -20,7 +20,7 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">The Founding Board <span class="text-muted">All NJ, all the time.</span></h2>
+          <h2 class="featurette-heading">The Founding Board <span class="text-primary">All NJ, all the time.</span></h2>
           <p class="lead"> David recruited friends from South Brunswick High school and from Rutgers Unviversity who were living in Central NJ to help bring Marna's Pals to life. These friends helped to build the infrastructure that we still use today. In discussions with these members we set the scholarship criteria, started our first fundraisers and awarded our first scholarships. Pictured here are: David Pal, Erin Prendergast, Liz Diaz, Mehreen Ismail, Jessica Pritchard, Marissa Rodriguez, Brandon Druker, and Doug Pritchard at the Marna's Pals Launch Party <a href= "\contactus"> Contact Us Here. </a> </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
@@ -32,9 +32,9 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, how to get involved. <span class="text-muted">Volunteer. Donate. Spread the Word.</span></h2>
+          <h2 class="featurette-heading">And lastly, how to get involved. <span class="text-primary">Volunteer. Donate. Spread the Word.</span></h2>
           <p class="lead">
-              Marna's Pals is always for people to help withe vents, scholar recruitment and sponsorships. If you think that you or someone you know is interested in helping us make attending college easier for a student whose family has been affected by cancer, please reach out. Email dpal@marnaspals.com
+              Marna's Pals is always for people to help withe vents, scholar recruitment and sponsorships. If you think that you or someone you know is interested in helping us make attending college easier for a student whose family has been affected by cancer, please reach out. Email dpal (at) marnaspals (dot) com
           </p>
         </div>
         <div class="col-md-5">
@@ -45,21 +45,21 @@
       <hr class="featurette-divider">
 
 <h1> Marna's Pals in the News </h1>
+<br>
+<div class = "container">
+
+       <p class = "wrapper">
+        
 
 
+<video width="700" height="350" controls>
 
-      <!-- /END THE FEATURETTES -->
+  <source src="assets/news12NJ.mp4" type="video/mp4">
+  </video>
 
+</p>
+        </div>
 
-      <!-- FOOTER -->
-       <!--  <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer> -->
-
-    </div><!-- /.container -->
-
-
-    
+</br>    
   </body>
 </html>
