--- a/app/views/pages/applyhere.html.erb
+++ b/app/views/pages/applyhere.html.erb
@@ -1,5 +1,44 @@
+
+
+
+
+
+<div class="col-md-6 col-md-offset-3">
+<table class="table">
+  <thead>
+  	<tr>
+  		<th>
+  			#
+  		</th>
+  		<th>
+  			Scholarship Eligibility Requirements
+  		</th>
+  	<tr>
+  </thead>
+  <tbody>
+  		<tr>
+  				<th scope="row">1</th>
+  				<td>Student must be between 18-24 years old</td>
+  		</tr>
+  		<tr>
+  				<th scope="row">2</th>
+  				<td>Student must be attending a 2- or 4- year college or university to receive the award.</td>
+  		</tr>
+  		<tr>
+  				<th scope="row">3</th>
+  				<td>A Sibling/Parent/Self Must have been affected by cancer</td>
+  		</tr>
+  		<tr>
+  				<th scope="row">4</th>
+  				<td>The Student must live <b>AND/OR</b> attend school in NJ</td>
+  		</tr>
+
+</table>
+</div>
+
+</div>
 <div class = "wrapper">
-	<iframe src="https://docs.google.com/forms/d/1KjwVmubwgL40vTiq0_K3x4m2VNH43NJpcsJWYRGM6_4/viewform?embedded=true" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">
+	<iframe src="https://docs.google.com/forms/d/1KjwVmubwgL40vTiq0_K3x4m2VNH43NJpcsJWYRGM6_4/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">
 
 		Huh
 
