--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -66,7 +66,7 @@
 </br>
 
 <div class="wrapper">
-<img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/9tips.jpg" alt="Image for Tips">
+<img class="img-responsive center-block" src="assets/9tips.jpg" alt="Image for Tips">
 
 
 <br>
