add doug and S3 URL

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,7 +12,7 @@
           <p class="lead">The idea for Marna's Pals came after Marna passed away from Pancreatic Cancer in 2008. David Pal, Marna's son, was a Freshman at Rutgers University when she passed away and was fortunate to receive a lot of support from the University. When David graduated with no student loans, he realized how lucky he was and wanted to pay this forward by helping other students like him to afford to go to college. David recruited his friends and family to start an organizaiton with this purpose, and Marna's Pals was born</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets/marnaVarious 5_edited.JPG" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/marnaVarious 5_edited.JPG" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -24,7 +24,7 @@
           <p class="lead"> David recruited friends from South Brunswick High school and from Rutgers Unviversity who were living in Central NJ to help bring Marna's Pals to life. These friends helped to build the infrastructure that we still use today. In discussions with these members we set the scholarship criteria, started our first fundraisers and awarded our first scholarships. Pictured here are: David Pal, Erin Prendergast, Liz Diaz, Mehreen Ismail, Jessica Pritchard, Marissa Rodriguez, Brandon Druker, and Doug Pritchard at the Marna's Pals Launch Party <a href= "\contactus"> Contact Us Here. </a> </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" src= "assets/Founding Board.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src= "https://s3.amazonaws.com/marnaspals-dpal/Founding Board.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -54,7 +54,7 @@
 
 <video width="700" height="350" controls>
 
-  <source src="assets/news12NJ.mp4" type="video/mp4">
+  <source src="https://s3.amazonaws.com/marnaspals-dpal/news12NJ.mp4" type="video/mp4">
   </video>
 
 </p>
