--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -13,7 +13,7 @@
 	  	<div class="item">
             <h2> 1 Dining Hall Meal </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9VPHHVMDMVMH6" title="We Spike for Scholarships" target="_blank" >
-                <img class="img-responsive center-block" src="assets/dininghallmeal.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/dininghallmeal.jpg">
               </a>
            
 		</div>
@@ -22,7 +22,7 @@
   		<div class="item">
             <h2> 1 Week of Coffee </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ENG7ANLNK7KAA" title="We Spike for Scholarships" target="_blank" >
-                <img class="img-responsive center-block" src="assets/oneweekofcoffee.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/oneweekofcoffee.jpg">
               </a>
            
 		</div>
@@ -32,7 +32,7 @@
   		<div class="item">
             <h2> 1 Book for Class </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YPP8FLBJ96JUE" title="We Spike for Scholarships" target="_blank" >
-                <img class="img-responsive center-block" src="assets/onetextbook.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/onetextbook.jpg">
               </a>
            
 		</div>
@@ -103,7 +103,7 @@
       <div class="item">
             <h2> Other </h2>
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3JSUNL5T6KQLS" title="We Spike for Scholarships" target = "_blank">
-                <img class="img-responsive center-block" src="assets/other.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/other.jpg">
               </a>
            
     </div>
