--- a/app/views/pages/gala.html.erb
+++ b/app/views/pages/gala.html.erb
@@ -4,7 +4,7 @@
 		<h1 class = "text-danger"> Yes, we know. The moms are mad. </h1>
 		<div class="item">
 			<a href= "\donate" title"click here to help">
-			<img class = "img-responsive center-block" src= "assets/moms.jpg"> </a>
+			<img class = "img-responsive center-block" src= "https://s3.amazonaws.com/marnaspals-dpal/moms.jpg"> </a>
 		</div>
 <br>
 		<h2> We're upset, too. There will be no Gala this year. But we hope that you will help make sure that we will have scholars next year and for years to come. <br>
