--- a/app/views/pages/scholars.html.erb
+++ b/app/views/pages/scholars.html.erb
@@ -21,7 +21,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Daniyal Aikal.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Daniyal Aikal.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -40,7 +40,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Rebecca Armand senior pic.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Rebecca Armand senior pic.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -60,7 +60,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Dana.jpeg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Dana.jpeg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -79,7 +79,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Siobhan 2015.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Siobhan 2015.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -97,7 +97,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Michelle Kotolnick.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Michelle Kotolnick.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -117,7 +117,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Brandon Latteri.jpeg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Brandon Latteri.jpeg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -136,7 +136,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Gina Lione-Napoli.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Gina Lione-Napoli.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -153,7 +153,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Sarah LoRusso.JPG" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Sarah LoRusso.JPG" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -174,7 +174,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Syed A. Mahmood.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Syed A. Mahmood.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -192,7 +192,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Amna Rana.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Amna Rana.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -211,7 +211,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Aleks Spirollari.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Aleks Spirollari.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -231,7 +231,7 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Jessica Tynon.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Jessica Tynon.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -250,6 +250,6 @@
 		  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="assets\Oren Vitenson.JPG" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/Oren Vitenson.JPG" alt="Generic placeholder image">
         </div>
       </div>
