--- a/app/views/pages/contactus.html.erb
+++ b/app/views/pages/contactus.html.erb
@@ -35,7 +35,7 @@
 					</h2>
 
 					<h3>
-						<img style="width:100%;height:100%;" src="assets/headshotdpal2.jpg">
+						<img style="width:100%;height:100%;" src="https://s3.amazonaws.com/marnaspals-dpal/headshotdpal2.jpg">
 							<a href="mailto:dpal@marnaspals.com"> dpal@marnaspals.com </a>
 					 	<br>
 					 	<a href="tel:6094360793"> (609) 436-0793 </a>
@@ -53,7 +53,7 @@
 						V. President 
 					</h2>
 					<h3>
-						<img style="width:100%;height:100%;" src="assets/headshotldiaz.jpg">
+						<img style="width:100%;height:100%;" src="https://s3.amazonaws.com/marnaspals-dpal/headshotldiaz.jpg">
 
  							<a href="mailto:ediaz@marnaspals.com"> ediaz@marnaspals.com </a>
 
@@ -68,11 +68,11 @@
 					<h2> 
 						Doug Pritchard 
 						<br>
-						Board Sec. 
+						Dir. Info 
 						<br>
 					</h2>
 					<h3>
-						<img style="width:100%;height:100%;" src="assets/headshotdpal2.jpg">
+						<img style="width:100%;height:100%;" src="https://s3.amazonaws.com/marnaspals-dpal/headshotdpritchard.jpg">
 					</h3>
 					<h4>
  						<a href="mailto:dpritchard@marnaspals.com"> dpritchard@marnaspals.com </a>
@@ -91,7 +91,7 @@
 						Scholarships
 					</h2>
 					<h3>
-						<img style="width:100%;height:100%;" src="assets/headshotjpritchard.jpg">
+						<img style="width:100%;height:100%;" src="https://s3.amazonaws.com/marnaspals-dpal/headshotjpritchard.jpg">
 					</h3>
 					<h4>
 					 	<a href="mailto:jpritchard@marnaspals.com"> jpritchard@marnaspals.com </a>
