--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -10,7 +10,7 @@
 <div class="item">
             
               <a href="\vball" title="We Spike for Scholarships">
-                <img class="img-responsive center-block" src="assets/vball2.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/vball2.jpg">
               </a>
            
 </div>
@@ -31,7 +31,7 @@
 <div class="item">
             
               <a href="\gala" title="Party On, Garth!">
-                <img class="img-responsive center-block" src="assets/gala.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/gala.jpg">
               </a>
            
 </div>
@@ -52,7 +52,7 @@
 <div class="item">
             
               <a href="http://www.therun4hope.com" target="_blank" title="Run, Forrest, Run!">
-                <img class="img-responsive center-block" src="assets/runforhope.jpg">
+                <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/runforhope.jpg">
               </a>
            
 </div>
