--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
       <div class="carousel-inner" role="listbox">
 
         <div class="item active">
-          <img class="img-responsive center-block" src="assets/marnaVarious 5_edited.JPG" alt="First slide">
+          <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/marnaVarious 5_edited.JPG" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Meet Marna</h1>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="item">
-          <img class="img-responsive center-block" src="assets/scholars.JPG" title="Second slide">
+          <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/scholars.JPG" title="Second slide">
             <div class="carousel-caption">
               <h1>This year we awarded $15,000</h1>
               <p>Do you want to meet the 15 students that won an award this year? We had over 50 qualified students apply, but we could only pick some of them. </p>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="item">
-          <img class="img-responsive center-block" src="assets/LP26.jpg" title="Third slide">
+          <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/LP26.jpg" title="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Are you here to apply for an award?</h1>
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="img-responsive center-block" src="assets/vball.jpg" alt="Fourth slide">
+          <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/vball.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Spiking for Scholarships</h1>
