--- a/app/views/pages/vball.html.erb
+++ b/app/views/pages/vball.html.erb
@@ -8,7 +8,7 @@
 		
 <h1> Thank you to all of our sponsors! </h1>
 
-<img class="img-responsive center-block" src="assets/vballsponsors.jpg">
+<img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/vballsponsors.jpg">
 
 	</div>
 </div>
