--- a/app/views/pages/contactus.html.erb
+++ b/app/views/pages/contactus.html.erb
@@ -28,23 +28,23 @@
 			<br>
 
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-xs-12 col-md-6 col-lg-3">
 				<div class = "item">
 					<br></br>
 					<h2> David Pal  <br> President 
 					</h2>
 
-					<h3>
+					<h4>
 						<img style="width:100%;height:100%;" src="https://s3.amazonaws.com/marnaspals-dpal/headshotdpal2.jpg">
 							<a href="mailto:dpal@marnaspals.com"> dpal@marnaspals.com </a>
 					 	<br>
 					 	<a href="tel:6094360793"> (609) 436-0793 </a>
-					 </h3>
+					 </h4>
 				</div>
 			</div>
 
 
-			<div class="col-md-3">
+			<div class="col-xs-12 col-md-6 col-lg-3">
 				<div class = "item">
 					<br></br>
 					<h2> 
@@ -52,17 +52,17 @@
 						<br> 
 						V. President 
 					</h2>
-					<h3>
+					<h4>
 						<img style="width:100%;height:100%;" src="https://s3.amazonaws.com/marnaspals-dpal/headshotldiaz.jpg">
 
  							<a href="mailto:ediaz@marnaspals.com"> ediaz@marnaspals.com </a>
 
  						<br>
-					</h3>
+					</h4>
 				</div>
 			</div>
 
-			<div class="col-md-3">
+			<div class="col-xs-12 col-md-6 col-lg-3">
 				<div class = "item">
 					<br></br>
 					<h2> 
@@ -71,9 +71,9 @@
 						Dir. Info 
 						<br>
 					</h2>
-					<h3>
+					<h4>
 						<img style="width:100%;height:100%;" src="https://s3.amazonaws.com/marnaspals-dpal/headshotdpritchard.jpg">
-					</h3>
+					</h4>
 					<h4>
  						<a href="mailto:dpritchard@marnaspals.com"> dpritchard@marnaspals.com </a>
  						<br>
@@ -82,7 +82,7 @@
 			</div>
 
 
-			<div class="col-md-3">
+			<div class="col-xs-12 col-md-6 col-lg-3">
 				<div class = "item">
 					<br></br>
 					<h2> 
@@ -90,9 +90,9 @@
 						<br> 
 						Scholarships
 					</h2>
-					<h3>
+					<h4>
 						<img style="width:100%;height:100%;" src="https://s3.amazonaws.com/marnaspals-dpal/headshotjpritchard.jpg">
-					</h3>
+					</h4>
 					<h4>
 					 	<a href="mailto:jpritchard@marnaspals.com"> jpritchard@marnaspals.com </a>
 					 	<br>
