--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
           <img class="img-responsive center-block" src="https://s3.amazonaws.com/marnaspals-dpal/marnaVarious 5_edited.JPG" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-                <div class="col-xs-4">
+                <div class="col-xs-6 col-md-12 col-lg-12">
               <h1>Meet Marna</h1>
               <p>Marna was an amazing woman who valued her friends, family and helping others. She passed away in 2008 from Pancreatic Cancer. This scholarship is in hier honor. </p>
               <p><a class="btn btn-lg btn-primary" href="\about" role="button">Learn More</a></p>
