media font size in half

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -22,6 +22,16 @@ $text-color: #FFFFFF;
 .hidden { display: none; }
 
 
+@media only screen and (max-width: 767px) {
+
+   font-size: 1em;
+   
+
+   
+      font-size: .5em;
+   }
+
+
 /*flash*/
 
 .alert-error {
