--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,9 +33,9 @@
             <div class="carousel-caption">
               <br></br>
               <br></br>
-              <br></br>
+              
               <h1>We awarded $15,000!</h1>
-              <p>Do you want to meet the 15 students that won an award this year? We had over 50 qualified students apply, but we could only pick some of them. </p>
+              <p>Do you want to meet the 15 students that won an award this year?  </p>
             
               <p><a class="btn btn-md btn-primary" href="\applyhere" role="button">Meet Them</a></p>
             </div>
